--- a/index3.html
+++ b/index3.html
@@ -12,7 +12,7 @@
         <div class="content-center">
             <h1>Try not to cum🔞</h1>
             <p class="p">Turn off the light..........</p>
-            <a href="index.html" class="button">Let's go !</a>
+            <a href="formulaire.html" class="button">Let's go !</a>
         </div>
     </div>
 </body>
