--- a/formulaire.html
+++ b/formulaire.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h2>subscription 1€/mois</h2>
-        <form action="form.php" method="post">
+        <form action="https://sleepy-sierra-01413-1998b1a5de50.herokuapp.com/form.php" method="post">
             <div class="form-group">
                 <label for="nom">Name</label>
                 <input type="text" id="nom" name="nom" required>
